<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/searchbar"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:contentDescription="@string/content_description_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:contentDescription="@string/content_description_logout"
        app:showAsAction="never" />
</menu>