<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".camera.ItemCameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/appBarLayoutBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/appBarLayoutBottom"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/Toolbar_Theme"
            app:navigationIcon="@drawable/baseline_close_24"
            app:navigationIconTint="@color/md_theme_light_surface">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/objectDetectionSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:enabled="true"
                android:text="@string/object_detection"
                android:textColor="@color/md_theme_light_surface"
                android:visibility="invisible" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp">

            <Button
                android:id="@+id/captureButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/camera_capture"
                android:contentDescription="@string/capture"
                android:visibility="invisible"
                app:backgroundTint="@color/md_theme_light_onPrimary" />

            <Button
                android:id="@+id/viewImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end|center"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/image_gallery"
                android:contentDescription="@string/choose_image"
                android:visibility="invisible"
                app:backgroundTint="@color/md_theme_light_onPrimary" />
        </com.google.android.material.appbar.MaterialToolbar>

        <Button
            android:id="@+id/skipImageButton"
            style="@style/ButtonWithoutShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#1A454545"
            android:text="@string/skip"
            android:textColor="@color/md_theme_light_onPrimary"
            android:visibility="visible"
            app:rippleColor="@color/md_theme_light_onSurfaceVariant" />
    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>